# TiM

./: .gitignore
PC/: main.c  makefile
PC/src/: main.cpp
TI/: CMakeLists.txt
TI/src/: EventSubscriber.hpp  GUI.hpp  ImageUtils.cpp  ImageUtils.hpp  MirrorGui.cpp  MirrorGui.hpp  Screen.cpp  Screen.hpp  TiM.cpp  TiM.hpp  main.cpp  main.hpp
